test/scc/ext/tm/semantic-errors/002.a
002.t:3:5: error: jumping into the body of _Atomic block using goto statement is prohibited